--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,58 @@ a{
 	text-decoration:none;
 }
 
+
 #top {
-    width: 1200px;
+    width: 100%;
     height: 70px;
-    margin:0 auto;;
+    
+    margin:0 auto;
     border-bottom: 4px solid #ddd;
 }
+.button{
+    background-color: #4CAF50;
+    border: none;
+    border-radius:4px;
+    margin-top:10px;
+    color: white;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline;
+    font-size: 16px;
+    cursor: pointer;
+}
+/*search bar*/
+input[type=text] {
+    width: 130px;
+    margin-top: 10px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+  background-color: white;
+   
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 6px 10px 6px 20px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+input[type=text]:focus {
+    width: 40%;
+}
+#search{
+    margin-left:40%;
+}
+
+/*checkbox*/
+
 .container {
   display:inline;
   font-weight:bold;
   position:relative;
-  padding-left:35px;
+  padding-left:20px;
   margin-bottom:15px;
   cursor:pointer;
   font-size:12px;
@@ -197,26 +238,18 @@ a{
 /* TOP MENU */
 
 #top ul {
-    float:right;
     margin: 10px 0 0 0;
-    padding:0;
     list-style: none;
 }
 #top li{
     display: inline;
     font-size: 0.9em;
     line-height: 1.0em;
-    margin: 0 0 0 20px;
+    margin: 0 0 0 70px;
     padding:0;
 }
-#top li a{
-    color:#dc0000;
-    text-decoration: none;
-}
-#top li a:hover {
-  color: #000;
-  text-decoration: underline;
-}
+
+
 
 /* MAIN NAV MENU */
 
@@ -305,6 +338,7 @@ a{
   color: #000;
   margin: 0 0 6px 0;
 }
+
 #headlines h2, #headlines h3, #sidebars h3 {
   font-size: 1.7em;
 }
@@ -315,11 +349,13 @@ a{
   text-decoration: none;
 }
 
+#content-wrapper h1:hover{
+    text-decoration: underline;
+    
+}
 
 
-
-
-#headlines h1 a:hover, #headlines h2 a:hover, #headlines h3 a:hover, #headlines h4 a:hover, #sidebars h3 a:hover {
+#headlines h1 a:hover, #sidebars h1 a:hover {
   color: #dc0000;
   text-decoration: underline;
 }
