--- a/css/style.css
+++ b/css/style.css
@@ -254,9 +254,9 @@ input[type=text]:focus {
 /* MAIN NAV MENU */
 
 #nav ul{
-    float:left;
+    /*float:left;*/
     margin: 0;
-    padding: 0 10px;
+    padding: 0 80px;
     list-style:none;
 }
 #nav li{
@@ -264,7 +264,7 @@ input[type=text]:focus {
     font-size: 1.0em;
     line-height: 44px;
     text-transform: uppercase;
-    margin:0 29px 0 0;
+    margin:0 40px 0 0;
     padding: 0;
 }
 #nav li.last{
