--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a{
     border-bottom: 4px solid #ddd;
 }
 .button{
-    background-color: #4CAF50;
+    background-color: #008CBA;
     border: none;
     border-radius:4px;
     margin-top:10px;
@@ -276,7 +276,8 @@ input[type=text]:focus {
 }
 #nav li a:hover {
   color: #000;
-  text-decoration: none;
+  text-decoration: underline;
+    cursor: pointer;
 }
 /* MAIN SUB-NAV MENU */
 #sub-nav ul{
