--- a/css/style.css
+++ b/css/style.css
@@ -33,14 +33,14 @@ a{
 }
 /*search bar*/
 input[type=text] {
-    width: 130px;
+    width: 200px;
     margin-top: 10px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-  background-color: white;
-   
+   background-color: white;
+    background-image: url('css/searchicon.png')
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 6px 10px 6px 20px;
