--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ input[type=text]:focus {
 }
 
 #nav{
-    width:980px;
+    width:810px;
     height:44px;
     margin-left:185px;
 
@@ -153,6 +153,58 @@ input[type=text]:focus {
   border: 1px solid #d0d0d0;
   border-top: none;
 }
+.dropbtn {
+    background-color: #dc0000;
+    color: white;
+    padding: 13px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    width: 155px;
+    margin-left: 70px;
+    
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: absolute;
+    display: inline-block;
+     
+    
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 155px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin-left: 70px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: black;
+}
+
 #sub-nav{
     width:980px;
     height: :45px;
@@ -256,7 +308,7 @@ input[type=text]:focus {
 #nav ul{
     /*float:left;*/
     margin: 0;
-    padding: 0 80px;
+    padding: 0 50px;
     list-style:none;
 }
 #nav li{
@@ -264,7 +316,7 @@ input[type=text]:focus {
     font-size: 1.0em;
     line-height: 44px;
     text-transform: uppercase;
-    margin:0 40px 0 0;
+    margin:0 25px 0 0;
     padding: 0;
 }
 #nav li.last{
